--- a/Pelekis/index.html
+++ b/Pelekis/index.html
@@ -90,60 +90,47 @@
         </div>
     </div>
 
-    <div class="footer-top">
-        <div class="footer-links">
-            <a href="#">Πόροι</a>
-            <a href="#">Δωροκάρτες</a>
-            <a href="#">Βρες ένα κατάστημα</a>
-            <a href="#">Nike Journal</a>
-            <a href="#">Γίνε μέλος</a>
-            <a href="#">Σχόλια</a>
-            <a href="#">Κωδικοί προώθησης</a>
-        </div>
-        <div class="footer-links">
-            <a href="#">Ζήτησε βοήθεια</a>
-            <a href="#">Κατάσταση παραγγελίας</a>
-            <a href="#">Αποστολή και παράδοση</a>
-            <a href="#">Επιστροφές</a>
-            <a href="#">Επιλογές πληρωμής</a>
-            <a href="#">Επικοινωνία</a>
-            <a href="#">Αξιολογήσεις</a>
-        </div>
-        <div class="footer-links">
-            <a href="#">Εταιρεία</a>
-            <a href="#">Σχετικά με τη Nike</a>
-            <a href="#">Νέα</a>
-            <a href="#">Ευκαιρίες απασχόλησης</a>
-            <a href="#">Επενδυτές</a>
-            <a href="#">Βιωσιμότητα</a>
-            <a href="#">Σκοπός</a>
-        </div>
-
-        <div class="language">
-            <i class="far fa-globe"></i>
-            <p>Ελλάδα</p>
-        </div>
-    </div>
-
-    <div class="footer">
-        <p>© 2025 Nike, Inc. Με την επιφύλαξη παντός δικαιώματος</p>
-        <div class="dropdown">
-            <p>Οδηγοί</p>
-            <div class="dropdown-content">
-                <a href="#">Nike Air</a>
-                <a href="#">Nike Air Max</a>
-                <a href="#">Nike FlyEase</a>
-                <a href="#">Nike Pegasus</a>
-                <a href="#">Nike React</a>
-                <a href="#">Nike Vaporfly</a>
+    <footer style="background-color: #269; color: white; padding: 20px; text-align: center;">
+            <div style="max-width: 1200px; margin: auto; display: flex; flex-wrap: wrap; justify-content: space-around;">
+                <div style="flex-basis: 20%; margin: 10px;">
+                    <h4 style="margin-bottom: 10px;">We aer near you (find a store)</h4>
+                    <ul style="list-style: none; padding: 0;">
+                        <li style="margin-bottom: 5px;"><a href="#" style="color: white;">Become a Member</a></li>
+                        <li style="margin-bottom: 5px;"><a href="#" style="color: white;">Sign up for email</a></li>
+                        <li style="margin-bottom: 5px;"><a href="#" style="color: white;">Send us Feedback</a></li>
+                    </ul>
+                </div>
+                <div style="flex-basis: 20%; margin: 10px;">
+                    <h4 style="margin-bottom: 10px;">Connect with a hooman</h4>
+                    <ul style="list-style: none; padding: 0;">
+                        <li style="margin-bottom: 5px;"><a href="#" style="color: white;">Order Status</a></li>
+                        <li style="margin-bottom: 5px;"><a href="#" style="color: white;">Shipping and Delivery</a></li>
+                        <li style="margin-bottom: 5px;"><a href="#" style="color: white;">Returns</a></li>
+                        <li style="margin-bottom: 5px;"><a href="#" style="color: white;">Payment Options</a></li>
+                        <li style="margin-bottom: 5px;"><a href="#" style="color: white;">Contact Us On Inquiries</a></li>
+                    </ul>
+                </div>
+                <div style="flex-basis: 20%; margin: 10px;">
+                    <h4 style="margin-bottom: 10px;">Aboot us</h4>
+                    <ul style="list-style: none; padding: 0;">
+                        <li style="margin-bottom: 5px;"><a href="#" style="color: white;">News</a></li>
+                        <li style="margin-bottom: 5px;"><a href="#" style="color: white;">Careers</a></li>
+                        <li style="margin-bottom: 5px;"><a href="#" style="color: white;">Investors</a></li>
+                        <li style="margin-bottom: 5px;"><a href="#" style="color: white;">Sustainability</a></li>
+                    </ul>
+                </div>
+                <div style="flex-basis: 20%; margin: 10px;">
+                    <h4 style="margin-bottom: 10px;">Find us on social media</h4>
+                    <div style="display: flex; justify-content: space-between; width: 100px;">
+                        <a href="#" style="color: white;"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" style="color: white;"><i class="fab fa-twitter"></i></a>
+                        <a href="#" style="color: white;"><i class="fab fa-instagram"></i></a>
+                        <a href="#" style="color: white;"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
             </div>
-        </div>
-        <a href="#">Όροι χρήσης</a>
-        <a href="#">Όροι πώλησης</a>
-        <a href="#">Στοιχεία εταιρείας</a>
-        <a href="#">Πολιτική απορρήτου και cookie</a>
-        <a href="#">Ρυθμίσεις απορρήτου και cookie</a>
-    </div>
+        <p style="margin-top: 20px; text-align: center;">&copy; 2023 Bunga Shoes</p>
+    </footer>
 
     <script>
         let side_img_container = document.querySelector(".side-images");
